--- a/sql/hive-thriftserver/pom.xml
+++ b/sql/hive-thriftserver/pom.xml
@@ -81,6 +81,12 @@
       <groupId>org.apache.hive.shims</groupId>
       <artifactId>hive-shims-scheduler</artifactId>
       <version>1.1.0-cdh5.13.3</version>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
