--- a/pom.xml
+++ b/pom.xml
@@ -2298,6 +2298,11 @@
           </exclusion>
         </exclusions>
       </dependency>
+      <dependency>
+        <groupId>io.delta</groupId>
+        <artifactId>delta-core_2.12</artifactId>
+        <version>0.7.0</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
